examples/test/testpolicy17856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17856
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key49: value12
      key4: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value28
          key6: value6
          key2: value36
      podSelector:
        matchLabels:
          key34: value34
          key35: value5
          key41: value42
